Add another line working as foo_feature

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This is a seriously cool project, I'm going to learn how to code finally!
 
 This project will help Treehouse students learn.
+
+Add line in foo_feature.
